--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "prettify": "prettier --write ."
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.11",
     "chartist": "0.11.4",
     "core-js": "3.36.0",
     "google-maps": "4.3.3",
+    "quasar": "^1.14.7",
     "vue": "2.7.14",
     "vue-clickaway": "2.2.2",
     "vue-github-buttons": "3.1.0",
