--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "@vue/cli-service": "5.0.8",
     "@vue/eslint-config-prettier": "7.1.0",
     "es6-promise": "4.2.8",
-    "eslint": "8.56.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-vue": "9.17.0",
+    "eslint-webpack-plugin": "^4.2.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.5",
     "prettier": "2.8.8",
     "sass": "1.71.1",
     "sass-loader": "13.3.2",
