--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@quasar/extras": "^1.16.11",
     "chartist": "0.11.4",
     "core-js": "3.36.0",
+    "echarts": "^5.5.0",
     "google-maps": "4.3.3",
     "quasar": "^1.14.7",
     "vue": "2.7.14",
