--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "3.36.0",
     "echarts": "^5.5.0",
     "google-maps": "4.3.3",
+    "gsap": "^3.12.5",
     "qrcode": "^1.5.3",
     "quasar": "^1.14.7",
     "vue": "2.7.14",
