--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "vue-material": "1.0.0-beta-15",
     "vue-router": "3.6.5",
     "vue-social-sharing": "3.0.9",
-    "vuex": "^2.5.0"
+    "vuex": "^2.5.0",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.22.15",
