--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 ## 开发环境
 VUE_APP_SERVER_URL="https://localhost:8080"
 VUE_APP_IMAGE_SERVER_URL="https://localhost:8080"
+VUE_APP_WS_URL=ws://localhost:19213
