--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "echarts": "^5.5.0",
     "google-maps": "4.3.3",
     "gsap": "^3.12.5",
+    "leaflet": "^1.9.4",
     "qrcode": "^1.5.3",
     "quasar": "^1.14.7",
     "rxjs": "^7.4.0",
@@ -29,6 +30,7 @@
     "vue-material": "1.0.0-beta-15",
     "vue-router": "3.6.5",
     "vue-social-sharing": "3.0.9",
+    "vue2-leaflet": "^2.7.1",
     "vuex": "^2.5.0",
     "websocket": "^1.0.35"
   },
