--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-router": "3.6.5",
     "vue-social-sharing": "3.0.9",
     "vue2-leaflet": "^2.7.1",
+    "vuedraggable": "^2.24.3",
     "vuex": "^2.5.0",
     "websocket": "^1.0.35"
   },
