--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@quasar/extras": "^1.16.11",
     "@stomp/rx-stomp": "^1.1.4",
     "axios": "^1.7.2",
+    "canvas": "^2.11.2",
     "chartist": "0.11.4",
     "core-js": "3.36.0",
     "echarts": "^5.5.0",
     "google-maps": "4.3.3",
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
+    "qr-code-with-logo": "^1.1.0",
     "qrcode": "^1.5.3",
     "quasar": "^1.14.7",
     "rxjs": "^7.4.0",
