--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 ## 生产环境
 VUE_APP_SERVER_URL="http://196.189.124.226:19212"
-VUE_APP_WS_URL=ws://196.189.124.226:19213
+VUE_APP_WS_URL=wss://196.189.124.226:19213
